# MovieDBProject

./: .gitignore  README.md  config.json  currentDB.sql
WebApp/: CMakeLists.txt  WebApp.cpp  comments.cpp  handlers.cpp  handlers.h  movie_manage.cpp  movies.cpp  mycenter.cpp  permissions.cpp  room.cpp  tickets.cpp  users.cpp
bserv/: CMakeLists.txt
templates/: base.html  buyticket.html  comments.html  index.html  managecomments.html  managemovie.html  mycenter.html  payment.html  screening_rooms.html  users.html
